<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <EditText
        android:id="@+id/inputTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_do_livro"
        android:inputType="textCapWords"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/autor"
        android:inputType="textCapWords"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputQuantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade_ex_5"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
