<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pedidosLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDF5"
    tools:context=".ui.pedidos.PedidosActivity">

    <TextView
        android:id="@+id/textTituloPedidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lista_de_pedidos"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:background="#0097A7"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iconHome"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/voltar_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTituloPedidos"
        app:layout_constraintBottom_toBottomOf="@id/textTituloPedidos"
        android:layout_marginEnd="16dp"
        app:tint="@android:color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#DFF2F2"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textTituloPedidos"
        app:layout_constraintBottom_toTopOf="@id/middleGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/listaPedidos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:padding="8dp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@android:layout/simple_list_item_1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdicionarLivro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_livro"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/middleGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnImprimirLista"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImprimirLista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/imprimir_lista"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="@id/btnAdicionarLivro"
        app:layout_constraintBottom_toBottomOf="@id/btnAdicionarLivro"
        app:layout_constraintStart_toEndOf="@id/btnAdicionarLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
